--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "type": "git",
     "url": "ssh://git@github.com/deep-foundation/hasura.git"
   },
+  "type": "module",
   "description": "",
   "dependencies": {
     "@types/node": "^14.17.14",
     "@types/react": "^18.2.15",
-    "axios": "^0.21.1",
+    "axios": "^1.5.1",
     "babel-register": "^6.26.0",
     "cors": "^2.8.5",
     "debug": "^4.3.1",
@@ -39,7 +40,7 @@
     "typescript": "5.0.4"
   },
   "peerDependencies": {
-    "@apollo/client": "^3.7.14",
+    "@apollo/client": "^3.8.5",
     "@apollo/react-hooks": "^4.0.0",
     "apollo-boost": "^0.4.9",
     "apollo-link": "^1.2.14",
