--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,17 @@
 {
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
-    "experimentalDecorators": true,
-    "sourceMap": true,
-    "noImplicitAny": false,
-    "removeComments": true,
-    "jsx": "react",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "target": "es2015",
-    "skipLibCheck": true,
-    "lib": [
-      "dom",
-      "es6",
-      "es7"
-    ],
+    "target": "ESNext",
+    "jsx": "react-jsx",
+    "module": "Node16",
     "resolveJsonModule": true,
-    "esModuleInterop": true,
-    "isolatedModules": true,
     "declaration": true,
-    "typeRoots": [
-      "./node_modules/@types"
-    ]
-  }
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node16",
+    "skipLibCheck": true,
+    // Only for hasura, react-hasura, materialized-path, deeplinks because they are bad typed
+    "strictNullChecks": false,
+    "strict": false,
+
+  },
 }
