--- a/local/docker-compose.yml
+++ b/local/docker-compose.yml
@@ -86,7 +86,7 @@ services:
       - 'minio-config:/root/.minio'
     ports:
       - "${DEEP_MINIO_UI_PORT:-9000}:9000"
-      - "${DEEP_MINIO_PORT:-32765}:32765"
+      - "${DEEP_MINIO_CONSOLE_PORT:-32765}:32765"
     environment:
       - 'MINIO_ROOT_USER=${MINIO_ROOT_USER}'
       - 'MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}'
