Make unified config using DEEP_ prefix, with backwards compatibility preserved

--- a/local/docker-compose.yml
+++ b/local/docker-compose.yml
@@ -12,11 +12,11 @@ services:
     volumes:
     - db-data:/var/lib/postgresql/data
     environment:
-      - 'POSTGRES_USER=${POSTGRES_USER}'
-      - 'POSTGRES_PASSWORD=${POSTGRES_PASSWORD}'
-      - 'PGGSSENCMODE=${PGGSSENCMODE}'
-      - 'PGSSLMODE=${PGSSLMODE}'
-      - 'PGREQUIRESSL=${PGREQUIRESSL}'
+      - 'POSTGRES_USER=${DEEP_POSTGRES_USER:-${POSTGRES_USER:-postgres}}'
+      - 'POSTGRES_PASSWORD=${DEEP_POSTGRES_PASSWORD:-${POSTGRES_PASSWORD:-postgrespassword}}'
+      - 'PGGSSENCMODE=${DEEP_POSTGRES_GSS_ENCODING_MODE:-${PGGSSENCMODE:-disable}}'
+      - 'PGSSLMODE=${DEEP_POSTGRES_SSL_MODE:-${PGSSLMODE:-disable}}'
+      - 'PGREQUIRESSL=${DEEP_POSTGRES_REQUIRE_SSL:-${PGREQUIRESSL:-0}}'
     logging:
       driver: "json-file"
       options:
@@ -36,15 +36,15 @@ services:
     - "postgres"
     restart: always
     environment:
-      - 'HASURA_GRAPHQL_DATABASE_URL=${HASURA_GRAPHQL_DATABASE_URL}'
-      - 'HASURA_GRAPHQL_ENABLE_CONSOLE=${HASURA_GRAPHQL_ENABLE_CONSOLE}'
-      - 'HASURA_GRAPHQL_DEV_MODE=${HASURA_GRAPHQL_DEV_MODE}'
-      - 'HASURA_GRAPHQL_LOG_LEVEL=${HASURA_GRAPHQL_LOG_LEVEL}'
-      - 'HASURA_GRAPHQL_ENABLED_LOG_TYPES=${HASURA_GRAPHQL_ENABLED_LOG_TYPES}'
-      - 'HASURA_GRAPHQL_ADMIN_SECRET=${HASURA_GRAPHQL_ADMIN_SECRET}'
-      - 'HASURA_GRAPHQL_JWT_SECRET=${JWT_SECRET}'
-      - 'HASURA_GRAPHQL_ENABLE_REMOTE_SCHEMA_PERMISSIONS=${HASURA_GRAPHQL_ENABLE_REMOTE_SCHEMA_PERMISSIONS}'
-      - 'HASURA_GRAPHQL_UNAUTHORIZED_ROLE=${HASURA_GRAPHQL_UNAUTHORIZED_ROLE}'
+      - 'HASURA_GRAPHQL_DATABASE_URL=${DEEP_HASURA_GRAPHQL_DATABASE_URL:-${HASURA_GRAPHQL_DATABASE_URL}}'
+      - 'HASURA_GRAPHQL_ENABLE_CONSOLE=${DEEP_HASURA_GRAPHQL_ENABLE_CONSOLE:-${HASURA_GRAPHQL_ENABLE_CONSOLE}}'
+      - 'HASURA_GRAPHQL_DEV_MODE=${DEEP_HASURA_GRAPHQL_DEV_MODE:-${HASURA_GRAPHQL_DEV_MODE}}'
+      - 'HASURA_GRAPHQL_LOG_LEVEL=${DEEP_HASURA_GRAPHQL_LOG_LEVEL:-${HASURA_GRAPHQL_LOG_LEVEL}}'
+      - 'HASURA_GRAPHQL_ENABLED_LOG_TYPES=${DEEP_HASURA_GRAPHQL_ENABLED_LOG_TYPES:-${HASURA_GRAPHQL_ENABLED_LOG_TYPES}}'
+      - 'HASURA_GRAPHQL_ADMIN_SECRET=${DEEP_HASURA_GRAPHQL_ADMIN_SECRET:-${HASURA_GRAPHQL_ADMIN_SECRET}}'
+      - 'HASURA_GRAPHQL_JWT_SECRET=${DEEP_HASURA_GRAPHQL_JWT_SECRET:-${JWT_SECRET}}'
+      - 'HASURA_GRAPHQL_ENABLE_REMOTE_SCHEMA_PERMISSIONS=${DEEP_HASURA_GRAPHQL_ENABLE_REMOTE_SCHEMA_PERMISSIONS:-${HASURA_GRAPHQL_ENABLE_REMOTE_SCHEMA_PERMISSIONS}}'
+      - 'HASURA_GRAPHQL_UNAUTHORIZED_ROLE=${DEEP_HASURA_GRAPHQL_UNAUTHORIZED_ROLE:-${HASURA_GRAPHQL_UNAUTHORIZED_ROLE}}'
     logging:
       driver: "json-file"
       options:
@@ -55,22 +55,22 @@ services:
     image: nhost/hasura-storage:0.2.3
     depends_on:
       - hasura
-    restart: unless-stopped
+    restart: always
     ports:
       - "${DEEP_HASURA_STORAGE_PORT:-8000}:8000"
     extra_hosts: ['host.docker.internal:host-gateway']
     environment:
-      - 'DEBUG=${HASURA_STORAGE_DEBUG}'
-      - 'HASURA_METADATA=${HASURA_METADATA}'
-      - 'HASURA_ENDPOINT=${HASURA_ENDPOINT}'
-      - 'HASURA_GRAPHQL_ADMIN_SECRET=${HASURA_GRAPHQL_ADMIN_SECRET}'
-      - 'S3_ENDPOINT=${S3_ENDPOINT}'
-      - 'S3_ACCESS_KEY=${S3_ACCESS_KEY}'
-      - 'S3_SECRET_KEY=${S3_SECRET_KEY}'
-      - 'S3_BUCKET=${S3_BUCKET}'
-      - 'S3_ROOT_FOLDER=${S3_ROOT_FOLDER}'
-      - 'POSTGRES_MIGRATIONS=${POSTGRES_MIGRATIONS}'
-      - 'POSTGRES_MIGRATIONS_SOURCE=${POSTGRES_MIGRATIONS_SOURCE}'
+      - 'DEBUG=${DEEP_HASURA_STORAGE_DEBUG:-${HASURA_STORAGE_DEBUG}}'
+      - 'HASURA_METADATA=${DEEP_HASURA_STORAGE_HASURA_METADATA:-${HASURA_METADATA}}'
+      - 'HASURA_ENDPOINT=${DEEP_HASURA_STORAGE_HASURA_ENDPOINT:-${HASURA_ENDPOINT}}'
+      - 'HASURA_GRAPHQL_ADMIN_SECRET=${DEEP_HASURA_STORAGE_HASURA_GRAPHQL_ADMIN_SECRET:-${HASURA_GRAPHQL_ADMIN_SECRET}}'
+      - 'S3_ENDPOINT=${DEEP_HASURA_STORAGE_S3_ENDPOINT:-${S3_ENDPOINT}}'
+      - 'S3_ACCESS_KEY=${DEEP_HASURA_STORAGE_S3_ACCESS_KEY:-${S3_ACCESS_KEY}}'
+      - 'S3_SECRET_KEY=${DEEP_HASURA_STORAGE_S3_SECRET_KEY:-${S3_SECRET_KEY}}'
+      - 'S3_BUCKET=${DEEP_HASURA_STORAGE_S3_BUCKET:-${S3_BUCKET}}'
+      - 'S3_ROOT_FOLDER=${DEEP_HASURA_STORAGE_S3_ROOT_FOLDER:-${S3_ROOT_FOLDER}}'
+      - 'POSTGRES_MIGRATIONS=${DEEP_HASURA_STORAGE_POSTGRES_MIGRATIONS:-${POSTGRES_MIGRATIONS}}'
+      - 'POSTGRES_MIGRATIONS_SOURCE=${DEEP_HASURA_STORAGE_POSTGRES_MIGRATIONS_SOURCE:-${POSTGRES_MIGRATIONS_SOURCE}}'
     command: serve
     logging:
       driver: "json-file"
@@ -88,8 +88,8 @@ services:
       - "${DEEP_MINIO_PORT:-9000}:9000"
       - "${DEEP_MINIO_CONSOLE_PORT:-32765}:32765"
     environment:
-      - 'MINIO_ROOT_USER=${MINIO_ROOT_USER}'
-      - 'MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}'
+      - 'MINIO_ROOT_USER=${DEEP_MINIO_ROOT_USER:-${MINIO_ROOT_USER}}'
+      - 'MINIO_ROOT_PASSWORD=${DEEP_MINIO_ROOT_PASSWORD:-${MINIO_ROOT_PASSWORD}}'
     entrypoint: sh
     command: '-c ''mkdir -p /export/default && /opt/bin/minio server --address 0.0.0.0:9000 --console-address 0.0.0.0:32765 /export'''
     logging:
