--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "normalize-url": "^7.0.2",
     "path": "^0.12.7",
     "rimraf": "^3.0.2",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "ws": "^8.17.1"
   },
   "scripts": {
     "package:refresh": "rm -rf node_modules; rm -f package-lock.json; npm i",
@@ -47,7 +48,6 @@
     "apollo-link": "^1.2.14",
     "apollo-link-ws": "^1.0.20",
     "apollo-server-micro": "^2.21.0",
-    "react": "^18.2.0",
-    "ws": "^7.5.6"
+    "react": "^18.2.0"
   }
 }
