--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deep-foundation/hasura",
-  "version": "0.0.65",
+  "version": "0.0.66",
   "license": "Unlicense",
   "author": "Ivan S Glazunov <ivansglazunov@gmail.com>",
   "homepage": "https://github.com/deep-foundation/hasura",
@@ -22,6 +22,7 @@
     "node-fetch": "^2.6.1",
     "normalize-url": "^7.0.2",
     "path": "^0.12.7",
+    "react-apollo-network-status": "^5.2.1",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
     "ws": "^8.17.1"
